Fixed project links and name alignment

--- a/src/pages/Projects.css
+++ b/src/pages/Projects.css
@@ -59,7 +59,7 @@
 }
 
 .project-name {
-  position: relative;
+  position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
